# manageodoo

./: LICENSE  README.md  pyproject.toml
manageodoo/: cli.py  config.py  detect.py  env.py  errors.py  gitutil.py  odooconf.py  pg.py  ports.py  runner.py  worktree.py
